IngressController/myFirstIngress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-first-ingress
  namespace: backends
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /myFirstIngress
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port: 
              number: 8080
